# antimon

./: .coverage.cphelper.192667.XhoUycrx  .coverage.cphelper.192671.XOFFtHrx  .coverage.cphelper.192672.XUujdACx  .coverage.cphelper.192691.XhaJFTZx  .coverage.cphelper.192702.XTykddux  .coverage.cphelper.192735.XsmoXaIx  .coverage.cphelper.192778.XZDoLWkx  .coverage.cphelper.192779.XRiwkZgx  .coverage.cphelper.192781.XZUttbXx  .coverage.cphelper.192782.XotBSGAx  .coverage.cphelper.192825.XbIydZBx  .coverage.cphelper.192826.XcvoOOOx  .gitignore  README.md  ROADMAP.md  antimon.toml  pyproject.toml  test_antimon.toml  test_api_key.py  test_config_fix.py
.github/workflows/: ci.yml
docs/: faq.md
examples/: example_api_key.json  example_dangerous.json  example_safe.json  run_examples.py
src/antimon/: __init__.py  __main__.py  ai_detector.py  audit_logger.py  autofix.py  cli.py  color_utils.py  config.py  constants.py  core.py  demo.py  detectors.py  error_context.py  first_run.py  help_commands.py  last_error.py  logger.py  logging_config.py  pattern_detector.py  pattern_test.py  runtime_config.py  self_test.py  setup_claude_code.py  status.py  watch.py
tests/: test_autofix.py  test_batch_check.py  test_cli.py  test_core.py  test_core_runtime_config.py  test_dangerous_python.py  test_demo.py  test_detectors.py  test_direct_check.py  test_dry_run.py  test_error_context.py  test_first_run.py  test_glob_patterns_e2e.py  test_json_output.py  test_last_error.py  test_pattern_test.py  test_runtime_config.py  test_status.py  test_success_messages.py  test_watch.py
