[project]
name = "antimon"
version = "0.2.0"
description = "Security validation tool for AI coding assistants"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["security", "validation", "ai", "coding", "assistant", "hook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/antimon"
Documentation = "https://github.com/yourusername/antimon#readme"
Repository = "https://github.com/yourusername/antimon"
Issues = "https://github.com/yourusername/antimon/issues"

[project.scripts]
antimon = "antimon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
